Fix for mobile (not visible even in the inspector)

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 
 .flex {
     display:flex;
-    justify-content: space-between;
+    justify-content:space-between;
      margin:10px
 }
 
@@ -147,8 +147,8 @@ input {
     border-radius:3px;
     border-color:white;
     height: 20px;
-    margin-left:10px;
     border:none;
+    width: 180px;
 }
 
 .form {
@@ -229,12 +229,14 @@ button:hover{
     width: 430px;
 }
 .top-input {
-  flex-flow: column;
-  align-items: center;
+    display:flex;
+    align-items: center;
+    flex-flow:column;
 }
 .bottom-input {
-  flex-flow:column;
+  display:flex;
   align-items: center;
+  flex-flow:column;
 }}
 
 @media screen and (max-width:440px) {
@@ -245,3 +247,6 @@ button:hover{
 }
 
 
+.input-text h4 {
+    font-size:0.9rem;
+}
